# marce-jarvis

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ai-work-assistant.code-workspace  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agent/: .env.example  README.md  pyproject.toml
agent/src/ai_work_assistant_agent/: __init__.py  main.py
agent/src/ai_work_assistant_agent/api/: app.py  dependencies.py
agent/src/ai_work_assistant_agent/api/routes/: azure_devops.py  chat.py  health.py  outlook.py  planner.py  repo.py  todos.py
agent/src/ai_work_assistant_agent/api/schemas/: todos.py
agent/src/ai_work_assistant_agent/core/: config.py
agent/src/ai_work_assistant_agent/domain/: planner.py  repo.py  todos.py
agent/src/ai_work_assistant_agent/integrations/: azure_devops.py  email.py  outlook_graph.py  work_items.py
agent/src/ai_work_assistant_agent/persistence/: database.py  todo_repository.py
agent/src/ai_work_assistant_agent/services/: email_sync_service.py  planner_service.py  repo_intelligence_service.py  todo_service.py  work_item_sync_service.py
agent/tests/: README.md  conftest.py  test_azure_devops.py  test_health.py  test_outlook.py  test_planner.py  test_repo_intelligence.py  test_todos.py
docs/: README.md  architecture.md  debug-test-deploy.html  extension-capabilities-tutorial.html  repo-structure.md  roadmap.md  scaffolding.md
extension/: .env.example  .vscodeignore  LICENSE  README.md  package.json  tsconfig.json
scripts/: README.md  bootstrap.sh  dev-agent.sh  dev-extension.sh  dev.sh  format.sh  (+2 more)
(+13 files in other folders)
